--- a/SnakeGame.Client/Views/LeaderboardWindow.xaml
+++ b/SnakeGame.Client/Views/LeaderboardWindow.xaml
@@ -1,14 +1,69 @@
 <Window x:Class="SnakeGame.Client.Views.LeaderboardWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Leaderboard" Height="400" Width="400" WindowStartupLocation="CenterOwner">
-    <Grid Margin="8">
-        <DataGrid x:Name="Grid" AutoGenerateColumns="False" IsReadOnly="True">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Player" Binding="{Binding PlayerName}"/>
-                <DataGridTextColumn Header="Score" Binding="{Binding Score}"/>
-                <DataGridTextColumn Header="Date" Binding="{Binding DateAchieved}"/>
-            </DataGrid.Columns>
-        </DataGrid>
+        Title="Leaderboard"
+        Height="400"
+        Width="450"
+        WindowStartupLocation="CenterOwner">
+
+
+    <Grid Background="#F2F4F8">
+        
+        <Border Margin="10"
+                Background="White"
+                CornerRadius="12"
+                Padding="10"
+                BorderBrush="#D0D0D0"
+                BorderThickness="1">
+
+
+            <DataGrid x:Name="Grid"
+                      ItemsSource="{Binding Results}"
+                      AutoGenerateColumns="False"
+                      IsReadOnly="True"
+                      HeadersVisibility="Column"
+                      GridLinesVisibility="None"
+                      
+                      FontSize="14"
+                      CanUserResizeColumns="False"
+                      CanUserSortColumns="False">
+
+                
+                <DataGrid.RowStyle>
+                    <Style TargetType="DataGridRow">
+                        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                        <Setter Property="VerticalContentAlignment" Value="Center"/>
+
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding Rank}" Value="1">
+                                <Setter Property="Background" Value="#FFD700"/>
+                                <Setter Property="Foreground" Value="Black"/>
+                            </DataTrigger>
+                            <DataTrigger Binding="{Binding Rank}" Value="2">
+                                <Setter Property="Background" Value="#C0C0C0"/>
+                                <Setter Property="Foreground" Value="Black"/>
+                            </DataTrigger>
+                            <DataTrigger Binding="{Binding Rank}" Value="3">
+                                <Setter Property="Background" Value="#CD7F32"/>
+                                <Setter Property="Foreground" Value="Black"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </DataGrid.RowStyle>
+
+                
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="#" Binding="{Binding Rank}" Width="40"/>
+                    <DataGridTextColumn Header="Player" Binding="{Binding PlayerName}" Width="*"/>
+                    <DataGridTextColumn Header="Score" Binding="{Binding Score}" Width="80"/>
+                    <DataGridTextColumn Header="Date">
+                        <DataGridTextColumn.Binding>
+                            <Binding Path="DateAchieved" StringFormat="dd.MM.yyyy"/>
+                        </DataGridTextColumn.Binding>
+                    </DataGridTextColumn>
+                </DataGrid.Columns>
+
+            </DataGrid>
+        </Border>
     </Grid>
 </Window>
